Compilateur/y.output
Terminaux inutilisés dans la grammaire

    tCONST
    tMAIN
    tQUOTE


Grammaire

    0 $accept: Programme $end

    1 Programme: Funs

    2 Funs: Fun
    3     | Fun Funs

    4 Fun: tINT tID tPAROPEN Vars tPARCLOSE Bloc

    5 Bloc: tBRAOPEN Content tBRACLOSE
    6     | tBRAOPEN Content tRETURN Valeur tBRACLOSE

    7 Vars: %empty
    8     | tINT tID VarsNext

    9 VarsNext: %empty
   10         | tCOMMA tINT tID VarsNext

   11 Content: Affectation Content
   12        | Declaration Content
   13        | Printf Content
   14        | Condition Content
   15        | ConditionWhile Content
   16        | %empty

   17 $@1: %empty

   18 Declaration: tINT tID tEQU $@1 Valeur tSEM

   19 Affectation: tID tEQU Valeur tSEM

   20 Valeur: Valeur tADD Valeur
   21       | Valeur tMIN Valeur
   22       | Valeur tDIV Valeur
   23       | Valeur tMUL Valeur
   24       | tNB
   25       | tID
   26       | tPAROPEN Valeur tPARCLOSE

   27 Printf: tPRINTF tPAROPEN tID tPARCLOSE tSEM

   28 $@2: %empty

   29 $@3: %empty

   30 Condition: tIF tPAROPEN Expression tPARCLOSE $@2 Bloc $@3 tELSE Bloc

   31 Expression: Valeur tINF Valeur
   32           | Valeur tSUP Valeur
   33           | Valeur tEQU tEQU Valeur
   34           | Valeur tINF tEQU Valeur
   35           | Valeur tSUP tEQU Valeur
   36           | Valeur

   37 $@4: %empty

   38 ConditionWhile: tWHILE tPAROPEN Expression tPARCLOSE $@4 Bloc


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tINT (258) 4 8 10 18
    tCONST (259)
    tADD (260) 20
    tMIN (261) 21
    tMUL (262) 23
    tDIV (263) 22
    tEQU (264) 18 19 33 34 35
    tSEM (265) 18 19 27
    tPAROPEN (266) 4 26 27 30 38
    tPARCLOSE (267) 4 26 27 30 38
    tBRAOPEN (268) 5 6
    tBRACLOSE (269) 5 6
    tMAIN (270)
    tRETURN (271) 6
    tELSE (272) 30
    tCOMMA (273) 10
    tQUOTE (274)
    tPRINTF (275) 27
    tSUP (276) 32 35
    tINF (277) 31 34
    tNB <nb> (278) 24
    tIF <nb> (279) 30
    tWHILE <nb> (280) 38
    tID <str> (281) 4 8 10 18 19 25 27


Non-terminaux, suivis des règles où ils apparaissent

    $accept (27)
        à gauche: 0
    Programme (28)
        à gauche: 1
        à droite: 0
    Funs (29)
        à gauche: 2 3
        à droite: 1 3
    Fun (30)
        à gauche: 4
        à droite: 2 3
    Bloc (31)
        à gauche: 5 6
        à droite: 4 30 38
    Vars (32)
        à gauche: 7 8
        à droite: 4
    VarsNext (33)
        à gauche: 9 10
        à droite: 8 10
    Content (34)
        à gauche: 11 12 13 14 15 16
        à droite: 5 6 11 12 13 14 15
    Declaration (35)
        à gauche: 18
        à droite: 12
    $@1 (36)
        à gauche: 17
        à droite: 18
    Affectation (37)
        à gauche: 19
        à droite: 11
    Valeur (38)
        à gauche: 20 21 22 23 24 25 26
        à droite: 6 18 19 20 21 22 23 26 31 32 33 34 35 36
    Printf (39)
        à gauche: 27
        à droite: 13
    Condition (40)
        à gauche: 30
        à droite: 14
    $@2 (41)
        à gauche: 28
        à droite: 30
    $@3 (42)
        à gauche: 29
        à droite: 30
    Expression (43)
        à gauche: 31 32 33 34 35 36
        à droite: 30 38
    ConditionWhile (44)
        à gauche: 38
        à droite: 15
    $@4 (45)
        à gauche: 37
        à droite: 38


État 0

    0 $accept: . Programme $end

    tINT  décalage et aller à l'état 1

    Programme  aller à l'état 2
    Funs       aller à l'état 3
    Fun        aller à l'état 4


État 1

    4 Fun: tINT . tID tPAROPEN Vars tPARCLOSE Bloc

    tID  décalage et aller à l'état 5


État 2

    0 $accept: Programme . $end

    $end  décalage et aller à l'état 6


État 3

    1 Programme: Funs .

    $défaut  réduction par utilisation de la règle 1 (Programme)


État 4

    2 Funs: Fun .
    3     | Fun . Funs

    tINT  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 2 (Funs)

    Funs  aller à l'état 7
    Fun   aller à l'état 4


État 5

    4 Fun: tINT tID . tPAROPEN Vars tPARCLOSE Bloc

    tPAROPEN  décalage et aller à l'état 8


État 6

    0 $accept: Programme $end .

    $défaut  accepter


État 7

    3 Funs: Fun Funs .

    $défaut  réduction par utilisation de la règle 3 (Funs)


État 8

    4 Fun: tINT tID tPAROPEN . Vars tPARCLOSE Bloc

    tINT  décalage et aller à l'état 9

    $défaut  réduction par utilisation de la règle 7 (Vars)

    Vars  aller à l'état 10


État 9

    8 Vars: tINT . tID VarsNext

    tID  décalage et aller à l'état 11


État 10

    4 Fun: tINT tID tPAROPEN Vars . tPARCLOSE Bloc

    tPARCLOSE  décalage et aller à l'état 12


État 11

    8 Vars: tINT tID . VarsNext

    tCOMMA  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 9 (VarsNext)

    VarsNext  aller à l'état 14


État 12

    4 Fun: tINT tID tPAROPEN Vars tPARCLOSE . Bloc

    tBRAOPEN  décalage et aller à l'état 15

    Bloc  aller à l'état 16


État 13

   10 VarsNext: tCOMMA . tINT tID VarsNext

    tINT  décalage et aller à l'état 17


État 14

    8 Vars: tINT tID VarsNext .

    $défaut  réduction par utilisation de la règle 8 (Vars)


État 15

    5 Bloc: tBRAOPEN . Content tBRACLOSE
    6     | tBRAOPEN . Content tRETURN Valeur tBRACLOSE

    tINT     décalage et aller à l'état 18
    tPRINTF  décalage et aller à l'état 19
    tIF      décalage et aller à l'état 20
    tWHILE   décalage et aller à l'état 21
    tID      décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 16 (Content)

    Content         aller à l'état 23
    Declaration     aller à l'état 24
    Affectation     aller à l'état 25
    Printf          aller à l'état 26
    Condition       aller à l'état 27
    ConditionWhile  aller à l'état 28


État 16

    4 Fun: tINT tID tPAROPEN Vars tPARCLOSE Bloc .

    $défaut  réduction par utilisation de la règle 4 (Fun)


État 17

   10 VarsNext: tCOMMA tINT . tID VarsNext

    tID  décalage et aller à l'état 29


État 18

   18 Declaration: tINT . tID tEQU $@1 Valeur tSEM

    tID  décalage et aller à l'état 30


État 19

   27 Printf: tPRINTF . tPAROPEN tID tPARCLOSE tSEM

    tPAROPEN  décalage et aller à l'état 31


État 20

   30 Condition: tIF . tPAROPEN Expression tPARCLOSE $@2 Bloc $@3 tELSE Bloc

    tPAROPEN  décalage et aller à l'état 32


État 21

   38 ConditionWhile: tWHILE . tPAROPEN Expression tPARCLOSE $@4 Bloc

    tPAROPEN  décalage et aller à l'état 33


État 22

   19 Affectation: tID . tEQU Valeur tSEM

    tEQU  décalage et aller à l'état 34


État 23

    5 Bloc: tBRAOPEN Content . tBRACLOSE
    6     | tBRAOPEN Content . tRETURN Valeur tBRACLOSE

    tBRACLOSE  décalage et aller à l'état 35
    tRETURN    décalage et aller à l'état 36


État 24

   12 Content: Declaration . Content

    tINT     décalage et aller à l'état 18
    tPRINTF  décalage et aller à l'état 19
    tIF      décalage et aller à l'état 20
    tWHILE   décalage et aller à l'état 21
    tID      décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 16 (Content)

    Content         aller à l'état 37
    Declaration     aller à l'état 24
    Affectation     aller à l'état 25
    Printf          aller à l'état 26
    Condition       aller à l'état 27
    ConditionWhile  aller à l'état 28


État 25

   11 Content: Affectation . Content

    tINT     décalage et aller à l'état 18
    tPRINTF  décalage et aller à l'état 19
    tIF      décalage et aller à l'état 20
    tWHILE   décalage et aller à l'état 21
    tID      décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 16 (Content)

    Content         aller à l'état 38
    Declaration     aller à l'état 24
    Affectation     aller à l'état 25
    Printf          aller à l'état 26
    Condition       aller à l'état 27
    ConditionWhile  aller à l'état 28


État 26

   13 Content: Printf . Content

    tINT     décalage et aller à l'état 18
    tPRINTF  décalage et aller à l'état 19
    tIF      décalage et aller à l'état 20
    tWHILE   décalage et aller à l'état 21
    tID      décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 16 (Content)

    Content         aller à l'état 39
    Declaration     aller à l'état 24
    Affectation     aller à l'état 25
    Printf          aller à l'état 26
    Condition       aller à l'état 27
    ConditionWhile  aller à l'état 28


État 27

   14 Content: Condition . Content

    tINT     décalage et aller à l'état 18
    tPRINTF  décalage et aller à l'état 19
    tIF      décalage et aller à l'état 20
    tWHILE   décalage et aller à l'état 21
    tID      décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 16 (Content)

    Content         aller à l'état 40
    Declaration     aller à l'état 24
    Affectation     aller à l'état 25
    Printf          aller à l'état 26
    Condition       aller à l'état 27
    ConditionWhile  aller à l'état 28


État 28

   15 Content: ConditionWhile . Content

    tINT     décalage et aller à l'état 18
    tPRINTF  décalage et aller à l'état 19
    tIF      décalage et aller à l'état 20
    tWHILE   décalage et aller à l'état 21
    tID      décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 16 (Content)

    Content         aller à l'état 41
    Declaration     aller à l'état 24
    Affectation     aller à l'état 25
    Printf          aller à l'état 26
    Condition       aller à l'état 27
    ConditionWhile  aller à l'état 28


État 29

   10 VarsNext: tCOMMA tINT tID . VarsNext

    tCOMMA  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 9 (VarsNext)

    VarsNext  aller à l'état 42


État 30

   18 Declaration: tINT tID . tEQU $@1 Valeur tSEM

    tEQU  décalage et aller à l'état 43


État 31

   27 Printf: tPRINTF tPAROPEN . tID tPARCLOSE tSEM

    tID  décalage et aller à l'état 44


État 32

   30 Condition: tIF tPAROPEN . Expression tPARCLOSE $@2 Bloc $@3 tELSE Bloc

    tPAROPEN  décalage et aller à l'état 45
    tNB       décalage et aller à l'état 46
    tID       décalage et aller à l'état 47

    Valeur      aller à l'état 48
    Expression  aller à l'état 49


État 33

   38 ConditionWhile: tWHILE tPAROPEN . Expression tPARCLOSE $@4 Bloc

    tPAROPEN  décalage et aller à l'état 45
    tNB       décalage et aller à l'état 46
    tID       décalage et aller à l'état 47

    Valeur      aller à l'état 48
    Expression  aller à l'état 50


État 34

   19 Affectation: tID tEQU . Valeur tSEM

    tPAROPEN  décalage et aller à l'état 45
    tNB       décalage et aller à l'état 46
    tID       décalage et aller à l'état 47

    Valeur  aller à l'état 51


État 35

    5 Bloc: tBRAOPEN Content tBRACLOSE .

    $défaut  réduction par utilisation de la règle 5 (Bloc)


État 36

    6 Bloc: tBRAOPEN Content tRETURN . Valeur tBRACLOSE

    tPAROPEN  décalage et aller à l'état 45
    tNB       décalage et aller à l'état 46
    tID       décalage et aller à l'état 47

    Valeur  aller à l'état 52


État 37

   12 Content: Declaration Content .

    $défaut  réduction par utilisation de la règle 12 (Content)


État 38

   11 Content: Affectation Content .

    $défaut  réduction par utilisation de la règle 11 (Content)


État 39

   13 Content: Printf Content .

    $défaut  réduction par utilisation de la règle 13 (Content)


État 40

   14 Content: Condition Content .

    $défaut  réduction par utilisation de la règle 14 (Content)


État 41

   15 Content: ConditionWhile Content .

    $défaut  réduction par utilisation de la règle 15 (Content)


État 42

   10 VarsNext: tCOMMA tINT tID VarsNext .

    $défaut  réduction par utilisation de la règle 10 (VarsNext)


État 43

   18 Declaration: tINT tID tEQU . $@1 Valeur tSEM

    $défaut  réduction par utilisation de la règle 17 ($@1)

    $@1  aller à l'état 53


État 44

   27 Printf: tPRINTF tPAROPEN tID . tPARCLOSE tSEM

    tPARCLOSE  décalage et aller à l'état 54


État 45

   26 Valeur: tPAROPEN . Valeur tPARCLOSE

    tPAROPEN  décalage et aller à l'état 45
    tNB       décalage et aller à l'état 46
    tID       décalage et aller à l'état 47

    Valeur  aller à l'état 55


État 46

   24 Valeur: tNB .

    $défaut  réduction par utilisation de la règle 24 (Valeur)


État 47

   25 Valeur: tID .

    $défaut  réduction par utilisation de la règle 25 (Valeur)


État 48

   20 Valeur: Valeur . tADD Valeur
   21       | Valeur . tMIN Valeur
   22       | Valeur . tDIV Valeur
   23       | Valeur . tMUL Valeur
   31 Expression: Valeur . tINF Valeur
   32           | Valeur . tSUP Valeur
   33           | Valeur . tEQU tEQU Valeur
   34           | Valeur . tINF tEQU Valeur
   35           | Valeur . tSUP tEQU Valeur
   36           | Valeur .

    tADD  décalage et aller à l'état 56
    tMIN  décalage et aller à l'état 57
    tMUL  décalage et aller à l'état 58
    tDIV  décalage et aller à l'état 59
    tEQU  décalage et aller à l'état 60
    tSUP  décalage et aller à l'état 61
    tINF  décalage et aller à l'état 62

    $défaut  réduction par utilisation de la règle 36 (Expression)


État 49

   30 Condition: tIF tPAROPEN Expression . tPARCLOSE $@2 Bloc $@3 tELSE Bloc

    tPARCLOSE  décalage et aller à l'état 63


État 50

   38 ConditionWhile: tWHILE tPAROPEN Expression . tPARCLOSE $@4 Bloc

    tPARCLOSE  décalage et aller à l'état 64


État 51

   19 Affectation: tID tEQU Valeur . tSEM
   20 Valeur: Valeur . tADD Valeur
   21       | Valeur . tMIN Valeur
   22       | Valeur . tDIV Valeur
   23       | Valeur . tMUL Valeur

    tADD  décalage et aller à l'état 56
    tMIN  décalage et aller à l'état 57
    tMUL  décalage et aller à l'état 58
    tDIV  décalage et aller à l'état 59
    tSEM  décalage et aller à l'état 65


État 52

    6 Bloc: tBRAOPEN Content tRETURN Valeur . tBRACLOSE
   20 Valeur: Valeur . tADD Valeur
   21       | Valeur . tMIN Valeur
   22       | Valeur . tDIV Valeur
   23       | Valeur . tMUL Valeur

    tADD       décalage et aller à l'état 56
    tMIN       décalage et aller à l'état 57
    tMUL       décalage et aller à l'état 58
    tDIV       décalage et aller à l'état 59
    tBRACLOSE  décalage et aller à l'état 66


État 53

   18 Declaration: tINT tID tEQU $@1 . Valeur tSEM

    tPAROPEN  décalage et aller à l'état 45
    tNB       décalage et aller à l'état 46
    tID       décalage et aller à l'état 47

    Valeur  aller à l'état 67


État 54

   27 Printf: tPRINTF tPAROPEN tID tPARCLOSE . tSEM

    tSEM  décalage et aller à l'état 68


État 55

   20 Valeur: Valeur . tADD Valeur
   21       | Valeur . tMIN Valeur
   22       | Valeur . tDIV Valeur
   23       | Valeur . tMUL Valeur
   26       | tPAROPEN Valeur . tPARCLOSE

    tADD       décalage et aller à l'état 56
    tMIN       décalage et aller à l'état 57
    tMUL       décalage et aller à l'état 58
    tDIV       décalage et aller à l'état 59
    tPARCLOSE  décalage et aller à l'état 69


État 56

   20 Valeur: Valeur tADD . Valeur

    tPAROPEN  décalage et aller à l'état 45
    tNB       décalage et aller à l'état 46
    tID       décalage et aller à l'état 47

    Valeur  aller à l'état 70


État 57

   21 Valeur: Valeur tMIN . Valeur

    tPAROPEN  décalage et aller à l'état 45
    tNB       décalage et aller à l'état 46
    tID       décalage et aller à l'état 47

    Valeur  aller à l'état 71


État 58

   23 Valeur: Valeur tMUL . Valeur

    tPAROPEN  décalage et aller à l'état 45
    tNB       décalage et aller à l'état 46
    tID       décalage et aller à l'état 47

    Valeur  aller à l'état 72


État 59

   22 Valeur: Valeur tDIV . Valeur

    tPAROPEN  décalage et aller à l'état 45
    tNB       décalage et aller à l'état 46
    tID       décalage et aller à l'état 47

    Valeur  aller à l'état 73


État 60

   33 Expression: Valeur tEQU . tEQU Valeur

    tEQU  décalage et aller à l'état 74


État 61

   32 Expression: Valeur tSUP . Valeur
   35           | Valeur tSUP . tEQU Valeur

    tEQU      décalage et aller à l'état 75
    tPAROPEN  décalage et aller à l'état 45
    tNB       décalage et aller à l'état 46
    tID       décalage et aller à l'état 47

    Valeur  aller à l'état 76


État 62

   31 Expression: Valeur tINF . Valeur
   34           | Valeur tINF . tEQU Valeur

    tEQU      décalage et aller à l'état 77
    tPAROPEN  décalage et aller à l'état 45
    tNB       décalage et aller à l'état 46
    tID       décalage et aller à l'état 47

    Valeur  aller à l'état 78


État 63

   30 Condition: tIF tPAROPEN Expression tPARCLOSE . $@2 Bloc $@3 tELSE Bloc

    $défaut  réduction par utilisation de la règle 28 ($@2)

    $@2  aller à l'état 79


État 64

   38 ConditionWhile: tWHILE tPAROPEN Expression tPARCLOSE . $@4 Bloc

    $défaut  réduction par utilisation de la règle 37 ($@4)

    $@4  aller à l'état 80


État 65

   19 Affectation: tID tEQU Valeur tSEM .

    $défaut  réduction par utilisation de la règle 19 (Affectation)


État 66

    6 Bloc: tBRAOPEN Content tRETURN Valeur tBRACLOSE .

    $défaut  réduction par utilisation de la règle 6 (Bloc)


État 67

   18 Declaration: tINT tID tEQU $@1 Valeur . tSEM
   20 Valeur: Valeur . tADD Valeur
   21       | Valeur . tMIN Valeur
   22       | Valeur . tDIV Valeur
   23       | Valeur . tMUL Valeur

    tADD  décalage et aller à l'état 56
    tMIN  décalage et aller à l'état 57
    tMUL  décalage et aller à l'état 58
    tDIV  décalage et aller à l'état 59
    tSEM  décalage et aller à l'état 81


État 68

   27 Printf: tPRINTF tPAROPEN tID tPARCLOSE tSEM .

    $défaut  réduction par utilisation de la règle 27 (Printf)


État 69

   26 Valeur: tPAROPEN Valeur tPARCLOSE .

    $défaut  réduction par utilisation de la règle 26 (Valeur)


État 70

   20 Valeur: Valeur . tADD Valeur
   20       | Valeur tADD Valeur .
   21       | Valeur . tMIN Valeur
   22       | Valeur . tDIV Valeur
   23       | Valeur . tMUL Valeur

    tMUL  décalage et aller à l'état 58
    tDIV  décalage et aller à l'état 59

    $défaut  réduction par utilisation de la règle 20 (Valeur)


État 71

   20 Valeur: Valeur . tADD Valeur
   21       | Valeur . tMIN Valeur
   21       | Valeur tMIN Valeur .
   22       | Valeur . tDIV Valeur
   23       | Valeur . tMUL Valeur

    tMUL  décalage et aller à l'état 58
    tDIV  décalage et aller à l'état 59

    $défaut  réduction par utilisation de la règle 21 (Valeur)


État 72

   20 Valeur: Valeur . tADD Valeur
   21       | Valeur . tMIN Valeur
   22       | Valeur . tDIV Valeur
   23       | Valeur . tMUL Valeur
   23       | Valeur tMUL Valeur .

    $défaut  réduction par utilisation de la règle 23 (Valeur)


État 73

   20 Valeur: Valeur . tADD Valeur
   21       | Valeur . tMIN Valeur
   22       | Valeur . tDIV Valeur
   22       | Valeur tDIV Valeur .
   23       | Valeur . tMUL Valeur

    $défaut  réduction par utilisation de la règle 22 (Valeur)


État 74

   33 Expression: Valeur tEQU tEQU . Valeur

    tPAROPEN  décalage et aller à l'état 45
    tNB       décalage et aller à l'état 46
    tID       décalage et aller à l'état 47

    Valeur  aller à l'état 82


État 75

   35 Expression: Valeur tSUP tEQU . Valeur

    tPAROPEN  décalage et aller à l'état 45
    tNB       décalage et aller à l'état 46
    tID       décalage et aller à l'état 47

    Valeur  aller à l'état 83


État 76

   20 Valeur: Valeur . tADD Valeur
   21       | Valeur . tMIN Valeur
   22       | Valeur . tDIV Valeur
   23       | Valeur . tMUL Valeur
   32 Expression: Valeur tSUP Valeur .

    tADD  décalage et aller à l'état 56
    tMIN  décalage et aller à l'état 57
    tMUL  décalage et aller à l'état 58
    tDIV  décalage et aller à l'état 59

    $défaut  réduction par utilisation de la règle 32 (Expression)


État 77

   34 Expression: Valeur tINF tEQU . Valeur

    tPAROPEN  décalage et aller à l'état 45
    tNB       décalage et aller à l'état 46
    tID       décalage et aller à l'état 47

    Valeur  aller à l'état 84


État 78

   20 Valeur: Valeur . tADD Valeur
   21       | Valeur . tMIN Valeur
   22       | Valeur . tDIV Valeur
   23       | Valeur . tMUL Valeur
   31 Expression: Valeur tINF Valeur .

    tADD  décalage et aller à l'état 56
    tMIN  décalage et aller à l'état 57
    tMUL  décalage et aller à l'état 58
    tDIV  décalage et aller à l'état 59

    $défaut  réduction par utilisation de la règle 31 (Expression)


État 79

   30 Condition: tIF tPAROPEN Expression tPARCLOSE $@2 . Bloc $@3 tELSE Bloc

    tBRAOPEN  décalage et aller à l'état 15

    Bloc  aller à l'état 85


État 80

   38 ConditionWhile: tWHILE tPAROPEN Expression tPARCLOSE $@4 . Bloc

    tBRAOPEN  décalage et aller à l'état 15

    Bloc  aller à l'état 86


État 81

   18 Declaration: tINT tID tEQU $@1 Valeur tSEM .

    $défaut  réduction par utilisation de la règle 18 (Declaration)


État 82

   20 Valeur: Valeur . tADD Valeur
   21       | Valeur . tMIN Valeur
   22       | Valeur . tDIV Valeur
   23       | Valeur . tMUL Valeur
   33 Expression: Valeur tEQU tEQU Valeur .

    tADD  décalage et aller à l'état 56
    tMIN  décalage et aller à l'état 57
    tMUL  décalage et aller à l'état 58
    tDIV  décalage et aller à l'état 59

    $défaut  réduction par utilisation de la règle 33 (Expression)


État 83

   20 Valeur: Valeur . tADD Valeur
   21       | Valeur . tMIN Valeur
   22       | Valeur . tDIV Valeur
   23       | Valeur . tMUL Valeur
   35 Expression: Valeur tSUP tEQU Valeur .

    tADD  décalage et aller à l'état 56
    tMIN  décalage et aller à l'état 57
    tMUL  décalage et aller à l'état 58
    tDIV  décalage et aller à l'état 59

    $défaut  réduction par utilisation de la règle 35 (Expression)


État 84

   20 Valeur: Valeur . tADD Valeur
   21       | Valeur . tMIN Valeur
   22       | Valeur . tDIV Valeur
   23       | Valeur . tMUL Valeur
   34 Expression: Valeur tINF tEQU Valeur .

    tADD  décalage et aller à l'état 56
    tMIN  décalage et aller à l'état 57
    tMUL  décalage et aller à l'état 58
    tDIV  décalage et aller à l'état 59

    $défaut  réduction par utilisation de la règle 34 (Expression)


État 85

   30 Condition: tIF tPAROPEN Expression tPARCLOSE $@2 Bloc . $@3 tELSE Bloc

    $défaut  réduction par utilisation de la règle 29 ($@3)

    $@3  aller à l'état 87


État 86

   38 ConditionWhile: tWHILE tPAROPEN Expression tPARCLOSE $@4 Bloc .

    $défaut  réduction par utilisation de la règle 38 (ConditionWhile)


État 87

   30 Condition: tIF tPAROPEN Expression tPARCLOSE $@2 Bloc $@3 . tELSE Bloc

    tELSE  décalage et aller à l'état 88


État 88

   30 Condition: tIF tPAROPEN Expression tPARCLOSE $@2 Bloc $@3 tELSE . Bloc

    tBRAOPEN  décalage et aller à l'état 15

    Bloc  aller à l'état 89


État 89

   30 Condition: tIF tPAROPEN Expression tPARCLOSE $@2 Bloc $@3 tELSE Bloc .

    $défaut  réduction par utilisation de la règle 30 (Condition)
